WebCore/platform/mac/CookieJar.mm
@@ -30,6 +30,12 @@
 #import "BlockExceptions.h"
 #import "PlatformString.h"
 
+#import <wtf/RetainPtr.h>
+
+#ifdef BUILDING_ON_TIGER
+typedef unsigned int NSUInteger;
+#endif
+
 namespace WebCore {
 
 String cookies(const KURL& url)
@@ -38,7 +44,18 @@ String cookies(const KURL& url)
 
     NSURL *URL = url.getNSURL();
     NSArray *cookiesForURL = [[NSHTTPCookieStorage sharedHTTPCookieStorage] cookiesForURL:URL];
-    NSDictionary *header = [NSHTTPCookie requestHeaderFieldsWithCookies:cookiesForURL];
+
+    // <rdar://problem/5632883> On 10.5, NSHTTPCookieStorage would happily store an empty cookie, which would be sent as "Cookie: =".
+    // We have a workaround in setCookies() to prevent that, but we also need to avoid sending cookies that were previously stored.
+    NSUInteger count = [cookiesForURL count];
+    RetainPtr<NSMutableArray> cookiesForURLFilteredCopy(AdoptNS, [[NSMutableArray alloc] initWithCapacity:count]);
+    for (NSUInteger i = 0; i < count; ++i) {
+        NSHTTPCookie *cookie = (NSHTTPCookie *)[cookiesForURL objectAtIndex:i];
+        if ([[cookie name] length] != 0)
+            [cookiesForURLFilteredCopy.get() addObject:cookie];
+    }
+
+    NSDictionary *header = [NSHTTPCookie requestHeaderFieldsWithCookies:cookiesForURLFilteredCopy.get()];
     return [header objectForKey:@"Cookie"];
 
     END_BLOCK_OBJC_EXCEPTIONS;
@@ -48,6 +65,10 @@ String cookies(const KURL& url)
 void setCookies(const KURL& url, const KURL& policyBaseURL, const String& cookieStr)
 {
     BEGIN_BLOCK_OBJC_EXCEPTIONS;
+
+    // <rdar://problem/5632883> On 10.5, NSHTTPCookieStorage would happily store an empty cookie, which would be sent as "Cookie: =".
+    if (cookieStr.isEmpty())
+        return;
 
     NSURL *URL = url.getNSURL();
     
